@@ -45,6 +45,8 @@ class Gem::Commands::UpdateCommand < Gem::Command
   end
 
   def execute
+    hig = {}
+
     if options[:system] then
       say "Updating RubyGems"
 
@@ -52,16 +54,22 @@ class Gem::Commands::UpdateCommand < Gem::Command
         fail "No gem names are allowed with the --system option"
       end
 
-      options[:args] = ["rubygems-update"]
+      spec = Gem::Specification.new
+      spec.name = 'rubygems-update'
+      spec.version = Gem::Version.new Gem::RubyGemsVersion
+      spec.version = Gem::Version.new '1.1.1'
+      hig['rubygems-update'] = spec
+
+      options[:user_install] = false
     else
       say "Updating installed gems"
-    end
 
-    hig = {} # highest installed gems
+      hig = {} # highest installed gems
 
-    Gem.source_index.each do |name, spec|
-      if hig[spec.name].nil? or hig[spec.name].version < spec.version then
-        hig[spec.name] = spec
+      Gem.source_index.each do |name, spec|
+        if hig[spec.name].nil? or hig[spec.name].version < spec.version then
+          hig[spec.name] = spec
+        end
       end
     end
 
@@ -84,14 +92,14 @@ class Gem::Commands::UpdateCommand < Gem::Command
     end
 
     if gems_to_update.include? "rubygems-update" then
-      latest_ruby_gem = remote_gemspecs.select do |s|
-        s.name == 'rubygems-update'
-      end
+      Gem.source_index.refresh!
 
-      latest_ruby_gem = latest_ruby_gem.sort_by { |s| s.version }.last
+      update_gems = Gem.source_index.search 'rubygems-update'
 
-      say "Updating version of RubyGems to #{latest_ruby_gem.version}"
-      installed = do_rubygems_update latest_ruby_gem.version
+      latest_update_gem = update_gems.sort_by { |s| s.version }.last
+
+      say "Updating RubyGems to #{latest_update_gem.version}"
+      installed = do_rubygems_update latest_update_gem.version
 
       say "RubyGems system software updated" if installed
     else
