@@ -153,7 +153,7 @@ class Gem::Uninstaller
   # NOTE: removes uninstalled gems from +list+.
 
   def remove_all(list)
-    list.dup.each { |spec| remove spec, list }
+    list.dup.each { |spec| uninstall_gem spec, list }
   end
 
   ##
